--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "autoprefixer": "^10",
     "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "^16.0.1"
